--- a/ProAcc/Views/Customers/GetCustomerById.cshtml
+++ b/ProAcc/Views/Customers/GetCustomerById.cshtml
@@ -17,7 +17,7 @@
             <input type="hidden" id="pcre_By" value="@Model.Cre_By" />
 
             <div class="form-group">
-                <label class="control-label col-md-4 required">Company Name</label>
+                <label class="control-label col-md-4 required">Customer Name</label>
                 <div class="col-md-10">
                     <input type="text" class="form-control" value="@Model.Company_Name" readonly id="txtCompanyName" />
                     @*<span id="lblCompanyName" style="color:red" />*@
